--- a/package.json
+++ b/package.json
@@ -3,32 +3,48 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "bert-as-service": "^1.0.1",
+    "bertjs": "^0.0.1",
+    "body-parser": "^1.19.1",
+    "cheerio": "^1.0.0-rc.12",
     "compute-cosine-similarity": "^1.1.0",
-    "cookie-parser": "~1.4.4",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "cosine-similarity": "^1.0.1",
-    "debug": "~2.6.9",
     "download": "^8.0.0",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jsonwebtoken": "^9.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "file-type": "^18.7.0",
+    "ip": "^2.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mammoth": "^1.6.0",
+    "mariadb": "^3.1.0",
+    "mimetype": "^0.0.8",
     "moment": "^2.29.4",
-    "mongoose": "^7.4.5",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^5.13.13",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "natural": "^6.7.2",
+    "nodemailer": "^6.9.9",
     "nodemon": "^2.0.15",
     "open": "^8.4.0",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "performance-now": "^2.1.0",
-    "pug": "2.0.0-beta11",
     "puppeteer": "^21.3.8",
+    "sequelize": "^6.37.1",
+    "socket.io": "^4.6.2",
     "string-similarity": "^4.0.4",
+    "twilio": "^4.22.0",
     "wordcount": "^1.1.1"
   }
 }
