--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "axios": "^1.5.1",
@@ -33,6 +33,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
+    "mysql2": "^3.9.7",
     "natural": "^6.7.2",
     "nodemailer": "^6.9.9",
     "nodemon": "^2.0.15",
