--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -20,20 +20,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
-
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.0
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
+          password: ${{ secrets.PASSWORD }}
           script: |
             cd ./no_plagiat_app/backend/
             git pull origin main
             npm install
-            pm2 restart no_plagiat_back || pm2 start index.js --name "no_plagiat_back"
+            pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
             
             
             
