--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'
+          node-version: '16'
 
       - name: Install dependencies
         run: npm install
@@ -27,10 +27,16 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            cd ./no_plagiat_app/backend/
-            git pull origin main
+            APP_DIR=./no_plagiat_app/backend/backend-Noplagiat/
+            if [ ! -d "$APP_DIR" ]; then
+              git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git $APP_DIR
+            else
+              cd $APP_DIR
+              git pull origin main
+            fi
+            cd $APP_DIR
             npm install
-            pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
+            pm2 reload all
             
             
             
