--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -25,13 +25,13 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          password: ${{ secrets.SERVER_PASSWORD }}
+          key: ${{ secrets.SSH_KEY }}
           script: |
-            APP_DIR=./no_plagiat_app/backend/backend-Noplagiat/
+            APP_DIR=./no_plagiat_app/backend/
             if [ ! -d "$APP_DIR" ]; then
               git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git $APP_DIR
             else
-              cd $APP_DIR
+              cd $APP_DIR/backend-Noplagiat/
               git pull origin main
             fi
             cd $APP_DIR
