--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -7,20 +7,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Deploy to Server
+      #Normally we should test the application at this step
+
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -34,12 +35,17 @@ jobs:
               cd $APP_DIR
               git pull origin main
             fi
-            cd $APP_DIR
-            npm install
-            pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
-            
-            
-            
+
+      - name: Execute the app
+        uses: JimCronqvist/action-ssh@master
+        with:
+            hosts: '${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}'
+            privateKey: ${{ secrets.SSH_KEY }}
+            command: |
+              cd ./no_plagiat_app/backend/backend-Noplagiat/
+              npm install
+              pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"            
+      
             
             
 
