--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -43,6 +43,8 @@ jobs:
             privateKey: ${{ secrets.SSH_KEY }}
             command: |
               cd ./no_plagiat_app/backend/backend-Noplagiat/
+              ls
+              npm -v
               npm install
               pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"            
       
