--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -17,36 +17,12 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: | 
+          npm install
+          pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
+          
 
-      #Normally we should test the application at this step
 
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            APP_DIR=./no_plagiat_app/backend/backend-Noplagiat/
-            if [ ! -d "$APP_DIR" ]; then
-              git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git $APP_DIR
-            else
-              cd $APP_DIR
-              git pull origin main
-            fi
-
-      - name: Execute the app
-        uses: JimCronqvist/action-ssh@master
-        with:
-            hosts: '${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}'
-            privateKey: ${{ secrets.SSH_KEY }}
-            command: |
-              cd ./no_plagiat_app/backend/backend-Noplagiat/
-              export NVM_DIR="$HOME/.nvm"
-              [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-              npm install
-              pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"            
       
             
             
