--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
+      - name: Install dependencies & run the app
         run: | 
           npm install
           pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
