Ajout des fichiers pour le deploiement continue

--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies & run the app
         run: | 
-          npm install --force
+          npm install 
           pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
           pm2 save
           
