--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -16,11 +16,29 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies & run the app
-        run: |
-          npm install
-          pm2 restart no_plagiat_back || pm2 start app.js --name "no_plagiat_back"
-          pm2 save
+      - name: Install dependencies
+        run: npm install
+
+      #Normally we should test the application at this step
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            APP_DIR=./
+            if [ ! -d "$APP_DIR" ]; then
+              git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git $APP_DIR
+            else
+              cd $APP_DIR
+              git pull origin main
+            fi
+      
+
+
+      
             
             
 
