--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -27,7 +27,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            APP_DIR=./
+            APP_DIR=./backend-Noplagiat/
             if [ ! -d "$APP_DIR" ]; then
               git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git $APP_DIR
             else
