--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -34,6 +34,10 @@ jobs:
               cd $APP_DIR
               git pull origin main
             fi
+            
+            cd $APP_DIR
+            npm install
+            pm2 start npm -- "backend" -- start --watch
       
 
 
