--- a/.github/workflows/pipeline_code.yml
+++ b/.github/workflows/pipeline_code.yml
@@ -19,20 +19,20 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      #Normally we should test the application at this step
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            APP_DIR=./backend-Noplagiat/
-            if [ ! -d "$APP_DIR" ]; then
-              git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git 
-            else
-              git pull origin main
-            fi
+#      #Normally we should test the application at this step
+#      - name: Deploy to server
+#        uses: appleboy/ssh-action@v1.0.3
+#        with:
+#          host: ${{ secrets.SERVER_HOST }}
+#          username: ${{ secrets.SERVER_USER }}
+#          key: ${{ secrets.SSH_KEY }}
+#          script: |
+#            APP_DIR=./backend-Noplagiat/
+#            if [ ! -d "$APP_DIR" ]; then
+#              git clone https://github.com/NoPlagiatTeam/backend-Noplagiat.git
+#            else
+#              git pull origin main
+#            fi
       
 
 
