--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "no_plagiat_back",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
+    "dev": "nodemon /app.js",
     "test": "jest"
   },
   "dependencies": {
