--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "no_plagiat_back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon /app.js",
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
     "test": "jest"
   },
   "dependencies": {
