--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "sequelize": "^6.37.1",
     "socket.io": "^4.6.2",
     "string-similarity": "^4.0.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "twilio": "^4.22.0",
     "wordcount": "^1.1.1"
   }
